Code changes to use Rabbit MQ instead of Redis

--- a/trade-service/src/main/resources/application.properties
+++ b/trade-service/src/main/resources/application.properties
@@ -8,8 +8,8 @@ eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:7777/eureka
 
 #messaging queue , rabbitmq is causing issue on lcaol due to firewall issue
-spring.redis.host=localhost
-spring.redis.port=6379
+#spring.redis.host=localhost
+#spring.redis.port=6379
 
 #h2 configuration
 spring.datasource.url=jdbc:h2:mem:tradeService
